link driver and lorry in expenses